--- a/jd2-ishop/WebContent/style.css
+++ b/jd2-ishop/WebContent/style.css
@@ -346,8 +346,92 @@
     margin-top: 50px;
     padding-bottom: 60px;
 
-	background: #fff;
+	background: White;
 	border-radius: 20px;
 }
- 
+
+.product-header {
+    width: 100%;
+    max-width: 850px;
+    display: flex;
+    justify-content: flex-start;
+    border-bottom: 2px solid lightgrey;
+    margin: 0 auto;
+}
+
+.product_name {
+    width: 45%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.price {
+
+    width: 10%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+}
+
+.quantity {
+    width: 20%;
+    display: flex;
+    align-items: center;
+	justify-content: center;
+}
+
+.quantity_button {
+	width: 20px;
+	height: 20px;
+}
+
+.total {
+    width: 15%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.delete_from_cart {
+	width: 15%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.delete_button {
+ 	width: 100%;
+ 	height:20px;
+ 	border: none;
+ 	border-radius: 5px;
+ 	font-family:sans-serif;
+ 	font-size: 14px;
+ 	color: White;
+ 	background-color: Red;
+ 	outline: none;
+ 	cursor: pointer;
+ }
+
+.products {
+    width: 100%;
+    max-width: 850px;
+    display: flex;
+    justify-content: flex-start;
+    margin: 0 auto;
+
+}
+
+.image_cart {
+	width: 30px;
+	height: 30px;
+}
+
+
+.total_order_sum {
+	height:30px;
+	margin-left: 724px;
+	margin-right: 30px;
+}
  
